--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<h1>What helps and impacts me personally</h1>
   <h2>Video games are a big help</h2>
-  <p> Video games help me a lot with different things. For example, If I am stressed out or worried about something, sometimes I will just go into my room, turn on my console and game to help keep my mind off of what ever I don't want to think about at that time.</p>
+  <p> Video games help me a lot with different things. For example, If I am stressed out or worried about something, sometimes I will just go into my room, turn on my console and game to help keep my mind off of what ever I don't want to think about at that time. Video games also play a big part as I have many great realtionships with friends that I play with every day which really lighten the mood and always give me a good laugh.</p>
+<img src="https://d2skuhm0vrry40.cloudfront.net/2020/articles/2020-01-07-09-32/1.jpg/EG11/resize/690x-1/quality/75/format/jpg"
 </body>
 </html>
